<resources>
    <string name="app_name">WorkTime</string>
    <string name="Title">Title</string>
    <string name="iconTitleDescription">xirectss.com</string>
    <string name="backDescription">back</string>
    <string name="txt_product">Product</string>
    <string name="txt_product_detaill">Price: $ 120.00</string>
    <string name="txt_user_name">Usuario</string>
    <string name="txt_password">Contraseña</string>
    <string name="txt_login">Ingresar</string>
    <string name="txt_null">none</string>
    <string name="txt_modulo">Modulo</string>
    <string name="txt_mod">Modulo</string>
    <string name="txt_infox">Info</string>
    <string name="txt_sincro">Sincronización</string>
    <string name="txt_sincroniza_asistencia">Envío Asistencia</string>
    <string name="txtfundos">Fundos</string>
    <string name="txt_modx">Modulos</string>
    <string name="txt_b_turnos">Turnos</string>
    <string name="lbl_te_fundo">Fundo</string>
    <string name="lblSelTurno">Seleccionar Turno</string>
    <string name="lblTarx">Tarea</string>
    <string name="lblTur">Turno</string>
    <string name="lbltar">Tarea</string>
    <string name="lblSelec">Seleccionar</string>
    <string name="lblAsis">Asistencia</string>
    <string name="lblgroup">Grupo</string>
    <string name="lblsal">Salida</string>
    <string name="lblGrup">Grupo</string>
    <string name="lblTrans">Transferencia</string>
    <string name="lblnewGroup">Crear Grupo</string>
    <string name="lblsincroto">Todos</string>
    <string name="lblcargamaster">Cargar Maestros</string>
    <string name="lbl_asi">Asistencias</string>
    <string name="lbl_info_fundo">"Fundo: "</string>
    <string name="lblNumMod">"Nro Modulos: "</string>
    <string name="lblModd">Modulos</string>
    <string name="lbl_Modulos">Lote / Parcela</string>
    <string name="txt_Actividades">Actividad</string>
    <string name="txt_Grupo">Grupo</string>
    <string name="lbl_Grupo">Grupo</string>
    <string name="lbl_turno">Turno</string>
    <string name="lbl_cultivo">Cultivo</string>

    <string name="lbl_ConsumidorIndirecto">Consumidor Indirecto</string>
    <string name="lbl_consumidor">Tipo Consumidor</string>
    <string name="txt_tipoActividad">Tipo Actividad</string>
    <string name="lbl_tipoActividad">Tipo Actividad</string>
    <string name="xdxd">Tipo Actividad</string>
    <string name="txt_Siguiente">Siguiente</string>
    <string name="lblActividades">Actividad</string>
    <string name="lblTurnosx">Grupos</string>
    <string name="lblHorario">Horario</string>
    <string name="bllTurnoo">Turno</string>
    <string name="lblAut">AutoIngreso</string>
    <string name="lbl_Add">Agregar</string>
    <string name="lblAutoIngresar">AutoIngreso</string>
    <string name="txtnewpl">Nueva Planilla</string>
    <string name="txtIngeso">Ingreso Planilla</string>
    <string name="txt_salida">Salida Planilla</string>
    <string name="txt_eliminar">Eliminar Planilla</string>
    <string name="txt_transferencia">Transferencias</string>
    <string name="lbl_Manual">Manual</string>
    <string name="btn_Cargar_Lista">Cargar Lista</string>
    <string name="lbl_automatica">Automática</string>
    <string name="lbl_masivo">Masivo</string>
    <string name="lbl_detalle">Detalle</string>
    <string name="lblFundos">Fundo</string>
    <string name="lblis">Siguiente</string>
    <string name="lblDniManual">"DNI: "</string>
    <string name="lblHoraInicioManual">Hora Inicio:</string>
    <string name="btn_add">Agregar DNI</string>
    <string name="btn_asignarCantidad">Asignar Cantidad</string>
    <string name="btn_qr">Leer QR</string>
    <string name="txtInigen">Inicio General</string>
    <string name="lbl_horaSalida">"Hora Salida: "</string>
    <string name="fhh">Agregar DNI</string>
    <string name="lgot">Salida</string>
    <string name="lblxdeee">Hora Transferencia</string>
    <string name="btnssk">Transferencia</string>
    <string name="lbssksss">Transferencia</string>
    <string name="dkdee">Destino</string>
    <string name="registro_productividad">Registro Productividad</string>
    <string name="cantidad">Cantidad</string>


    <string name="lbltipolabor">Tipo Labor:</string>
    <string name="lblempresa">Empresa:</string>
    <string name="lbltareacanthoras">"Cantidad Horas: "</string>
    <string name="txt_empresa_default">Empresa</string>
    <string name="txt_titulo_default">Titulo</string>
    <string name="txt_historial">Historial</string>
    <string name="lbl_borrar_historial">Borrar Historial</string>
    <string name="lbl_recuperar_historial">Ver Historial</string>
    <string name="txt_historial_password">"Ingrese su contraseña:"</string>
    <string name="txt_historial_login">"Continuar"</string>
    <string name="txt_historial_cancelar">"Cancelar"</string>
    <string name="lbl_salir_historial">"Atrás"</string>
</resources>
