<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="#f8f9fe" >
    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical" >        
        <!-- Title Content -->
        <include layout="@layout/util_title_simple_view" />
        <!-- Content -->
        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="8dip" 
            android:layout_margin="8dip"
            android:background="@drawable/bg_layout">

            <Button
                android:id="@+id/btn_new_planilla"
                style="@style/ButtonS"
                android:text="@string/txtnewpl" />

            <Button
                android:id="@+id/btn_ingreso_planilla"
                style="@style/ButtonS"
                android:text="@string/txtIngeso" />
            
            <Button
                android:id="@+id/btn_Salida_Planilla"
                style="@style/ButtonS"
                android:text="@string/txt_salida" />

            <Button
                android:id="@+id/btn_Eliminar_Planilla"
                style="@style/ButtonS"
                android:text="@string/txt_eliminar" />

            <Button
                android:id="@+id/btn_Transferencia"
                style="@style/ButtonS"
                android:text="@string/txt_transferencia" />

            <Button
                android:id="@+id/btn_Reg_Productividad"
                style="@style/ButtonS"
                android:text="@string/registro_productividad"
                android:visibility="visible"/>

            
            <Button
                android:id="@+id/btn_Sincronizar"
                style="@style/ButtonS"
                android:text="@string/txt_sincro" />

            <Button
                android:id="@+id/btn_Sincronizar_Asistencia"
                style="@style/ButtonS"
                android:text="@string/txt_sincroniza_asistencia" />
            
            <Button
                android:id="@+id/btn_Historial"
                style="@style/ButtonS"
                android:text="@string/txt_historial" />
            
        </LinearLayout>
        <!-- End Content -->
    </LinearLayout>
</ScrollView>