<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="#f8f9fe" >
    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical" >        
        <!-- Title Content -->
        <include layout="@layout/util_title_simple_view" />
        <!-- Content -->
        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="8dip" 
            android:layout_margin="8dip"
            android:background="@drawable/bg_layout">
  
            <TextView
                android:id="@+id/lbl_TipoActividad"
                style="@style/TextView"
                android:text="@string/xdxd" />

            <Spinner
                android:id="@+id/cboTipoActividad"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

            <TextView
                android:id="@+id/lblHorario"
                style="@style/TextView"   
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/lblHorario" />

            <Spinner
                android:id="@+id/cboHorario"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

            <TextView
                android:id="@+id/lblActividad"
                style="@style/TextView"
                android:layout_width="280dp"
                android:layout_height="wrap_content"
                android:text="@string/lblActividades" />

            <Spinner
                android:id="@+id/cboActividades"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

            <Spinner
                android:id="@+id/cboActividadIndirecta"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

            <TextView
                android:id="@+id/lblGrupo"
                style="@style/TextView"
                android:layout_width="282dp"
                android:layout_height="wrap_content"
                android:text="@string/lblTurnosx" />

            <Spinner
                android:id="@+id/cboGrupos"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />
            
            <Button
                android:id="@+id/btn_Siguiente"
                style="@style/ButtonS"
                android:text="@string/txt_Siguiente" />
       	     
        </LinearLayout>
        <!-- End Content -->
    </LinearLayout>
</ScrollView>