<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="#f8f9fe" >
    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical" >        
        <!-- Title Content -->
        <include layout="@layout/util_title_simple_view" />
        <!-- Content -->
        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="8dip" 
            android:layout_margin="8dip"
            android:background="@drawable/bg_layout">            

            <TextView
                android:id="@+id/txt_user_name"
                style="@style/TextView"
                android:text="@string/txtfundos" />

            <Spinner
                android:id="@+id/cboFundos"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

            <Button
                android:id="@+id/btn_Modelo"
                style="@style/ButtonS"
                android:text="@string/txt_mod" />

            <Button
                android:id="@+id/btn_Sincronizar"
                style="@style/ButtonS"
                android:text="@string/txt_sincro" />
            
        </LinearLayout>
        <!-- End Content -->
    </LinearLayout>
</ScrollView>