<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="#f8f9fe" >
    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical" >        
        <!-- Title Content -->

        <include
            android:id="@+id/textTitle"
            layout="@layout/util_title_simple_view" />

        <!-- Content -->
        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="8dip" 
            android:layout_margin="8dip"
            android:background="@drawable/bg_layout">            

            <TextView
                android:id="@+id/txt_user_empresa"
                style="@style/TextView"
                android:text="@string/txt_empresa_default" />
            <Spinner
                android:id="@+id/cboEmpressa"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />
            
            <TextView
                android:id="@+id/txt_user_name"
                style="@style/TextView"
                android:text="@string/txt_user_name" />

            <EditText 
                style="@style/InputText"
                android:inputType="number"
                android:id="@+id/inp_user"/>
            <TextView
                style="@style/TextView"
                android:text="@string/txt_password" />
            <EditText
               style="@style/InputText" 
               android:inputType="number"
               android:password="true"
               android:id="@+id/inp_pass">
            </EditText>

            <!-- 
            <ProgressBar
		        android:id="@+id/progressBar"
		        style="?android:attr/progressBarStyleHorizontal"
		        android:layout_width="match_parent"
		        android:layout_height="wrap_content" 
		        android:visibility="invisible" android:layout_marginTop="10dip"/>
                        
            <TextView
                android:id="@+id/lblErrorMsjIncorrect"
                style="@style/TextView"
                android:layout_width="275dp"
                android:layout_height="wrap_content"
                android:text="TextView" 
                android:gravity="center"
                android:layout_gravity="center_horizontal"/>
             -->
             
            <Button
                android:id="@+id/btn_Login"
                android:text="@string/txt_login"
                style="@style/ButtonS" />
        </LinearLayout>
        <!-- End Content -->
    </LinearLayout>
</ScrollView>